# git-aware

./: Cargo.toml  README.md
src/: git_actions.rs  main.rs  params_checker.rs
