[package]
name = "gitaware"
version = "1.0.2"
edition = "2021"
authors = ["Paul Rosset <paulrosset96@gmail.com>"]
license = "MIT"
description = "Git Aware is a command line tool that aims to make it easier to detect any dirty working copy in projects that uses Git"
readme = "README.md"
homepage = "https://github.com/PaulRosset/git-aware"
repository = "https://github.com/PaulRosset/git-aware"
keywords = ["cli", "git", "git-status", "status", "detection"]
categories = ["command-line-utilities"]

[dependencies]
git2 = "0.15.0"
ignore = "0.4.18"
